--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,7 +1,7 @@
 ja:
   views:
     pagination:
-      first: 最初
-      last: 最後
-      next: 次
-      previous: 戻る
+      first: "&#8810;"
+      last: "&#8811;"
+      next: "次へ"
+      previous: "戻る"
